# --AI-Fairness-Explainability-Toolkit

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  fairness-radar-feature.bundle  project_structure.md  pyproject.toml  pytest.ini  requirements.txt  setup.py  setup_docs.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: tests.yml
afet/: __init__.py
afet/core/: __init__.py  explainability.py  fairness_metrics.py  intersectional_fairness.py
afet/datasets/: __init__.py  synthetic_generator.py
afet/examples/finance/: README.md
afet/examples/healthcare/: README.md
afet/examples/hiring/: README.md  requirements.txt
afet/models/: model_registry.py
afet/models/pytorch/: __init__.py  model_wrapper.py
afet/tests/integration/: test_pytorch_fairness.py
afet/tests/unit/: test_pytorch_wrapper.py
afet/viz/: README.md  __init__.py  fairness_radar.py  fairness_radar_enhanced.py  intersectional_heatmap.py
docs/: api_reference.md  conf.py  index.rst  requirements.txt  tutorial_loan_approval.md
docs/api/: modules.rst
docs/getting_started/: installation.rst  quickstart.rst
examples/: fairness_radar_example.py  full_pipeline_example.py  intersectional_fairness_example.py  pytorch_fairness_example.py  visualization_demo.ipynb
scripts/: init_docs.py
tests/: __init__.py  test_viz.py
